fixed bug in z-index for fullscreenBtn

--- a/style/nav.css
+++ b/style/nav.css
@@ -81,6 +81,10 @@ flex-direction: column;
   z-index: 1;
 }
 
+#fullscreenBtn {
+  z-index: 2;
+}
+
 .turn {
   display: block;
   width: 32px !important;
